--- a/web-programming/quiz-1/quiz1/styles/style.css
+++ b/web-programming/quiz-1/quiz1/styles/style.css
@@ -2,3 +2,10 @@ html, body {
     margin: 0;
     padding: 0;
 }
+
+html {
+    overflow-y: scroll;
+    height: 100%;
+    -webkit-overflow-scrolling: touch;
+    /* overflow-scrolling: touch */;
+}
