--- a/web-programming/quiz-1/quiz1/styles/style.css
+++ b/web-programming/quiz-1/quiz1/styles/style.css
@@ -13,11 +13,34 @@ html {
     overflow-y: scroll;
     height: 100%;
     -webkit-overflow-scrolling: touch;
-    /* overflow-scrolling: touch */;
+    /* overflow-scrolling: touch; */
 }
 
 body {
     overflow-y: visible;
     position: relative;
     height: unset;
+    overflow-x: hidden;
+}
+
+.banner h2,
+.footer h2 {
+    margin: 20px 0;
+}
+  
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 0 80px;
+}
+  
+h2 {
+    margin: 50px 0 20px;
+}
+  
+.container .panel:nth-child(odd) {
+    background: #fff;
 }
