--- a/web-programming/quiz-1/quiz1/styles/style.css
+++ b/web-programming/quiz-1/quiz1/styles/style.css
@@ -13,7 +13,7 @@ html {
     overflow-y: scroll;
     height: 100%;
     -webkit-overflow-scrolling: touch;
-    /* overflow-scrolling: touch; */
+    overflow-scrolling: touch;
 }
 
 body {
