--- a/computer-graphics/assignment-2/style.css
+++ b/computer-graphics/assignment-2/style.css
@@ -1,1 +1,36 @@
-ECHO is on.
+/*
+    This style section is here to make the canvas more obvious on the
+    page.  It is white on a light gray page background, with a thin
+    black border.
+*/
+
+html, body {
+    background-color: #E8E8E8;
+    margin: 0;
+    padding: 0;
+}
+
+section {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 2%;
+}
+
+.container {
+    margin: auto;
+    margin-top: 11px;
+    margin-bottom: 22px;
+}
+
+canvas {
+    background-color: white;
+    display: block;
+}
+
+#canvasholder {
+    border:2px solid black;
+    float: left; /* This makes the border exactly fit the canvas. */
+}
